<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <TextView
        android:id="@+id/tv_myprofile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sen_bold"
        android:text="@string/my_profile"
        android:textColor="@color/stroke_blue"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guide_line_top" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_profil"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="@color/gray"
        app:cardCornerRadius="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_myprofile">

        <ImageView
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="20dp"
            android:contentDescription="@null"
            android:src="@drawable/iv_oval" />

        <ImageView
            android:id="@+id/iv_profil"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:contentDescription="@null"
            android:scaleType="centerCrop" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/email"
        android:textColor="@color/stroke_blue"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="@+id/cv_profil"
        app:layout_constraintTop_toBottomOf="@+id/cv_profil" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/dummyemail"
        android:textColor="@color/stroke_blue"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="3dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="@+id/cv_profil"
        app:layout_constraintStart_toStartOf="@+id/cv_profil"
        app:layout_constraintTop_toBottomOf="@id/tv_email" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="70dp"
        android:layout_marginTop="90dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/logout"
        android:textColor="@color/white"
        app:backgroundTint="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

</androidx.constraintlayout.widget.ConstraintLayout>