<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.personality.PersonalityActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="70dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_top_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/green"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_back"
                    style="@style/Widget.MaterialComponents.Button.IconOnly"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="15dp"
                    app:backgroundTint="@color/bottom_bar_blue"
                    app:cornerRadius="50dp"
                    app:icon="@drawable/ic_arrow_back"
                    app:iconTint="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/sen_bold"
                    android:text="@string/personality"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_choose_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/sen_bold"
            android:text="@string/choose_category"
            android:textColor="@color/stroke_blue"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_top_section" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_personality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            android:drawableEnd="@drawable/ic_three_arrows"
            android:fontFamily="@font/sen_bold"
            android:gravity="start|center_vertical"
            android:text="@string/want_to_know_personality"
            android:textColor="@color/black"
            app:backgroundTint="@color/text_box_background"
            app:layout_constraintTop_toBottomOf="@id/tv_choose_category" />

        <TextView
            android:id="@+id/tv_analyst"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/sen_bold"
            android:text="@string/analyst"
            android:textColor="@color/stroke_blue"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_personality" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_analyst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/tv_analyst"
            tools:listitem="@layout/item_personality" />

        <TextView
            android:id="@+id/tv_diplomats"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/sen_bold"
            android:text="@string/diplomats"
            android:textColor="@color/stroke_blue"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_analyst" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_diplomats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/tv_diplomats"
            tools:listitem="@layout/item_personality" />

        <TextView
            android:id="@+id/tv_sentinels"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/sen_bold"
            android:text="@string/sentinels"
            android:textColor="@color/stroke_blue"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_diplomats" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_sentinels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/tv_sentinels"
            tools:listitem="@layout/item_personality" />

        <TextView
            android:id="@+id/tv_explorers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/sen_bold"
            android:text="@string/explorers"
            android:textColor="@color/stroke_blue"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_sentinels" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_explorers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/tv_explorers"
            tools:listitem="@layout/item_personality" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>